k8/php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: php
  name: php
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: php
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/php-image-upload-backend: "true"
        io.kompose.service: php
    spec:
      containers:
        - image: php
          name: php
          resources: {}
          volumeMounts:
            - mountPath: /var/www/html
              name: php-claim0
      restartPolicy: Always
      volumes:
        - name: php-claim0
          persistentVolumeClaim:
            claimName: php-claim0
status: {}
