k8/apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: apache
  name: apache
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 30080
  selector:
    io.kompose.service: apache
status:
  loadBalancer: {}
