k8/php-image-upload-backend-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: php-image-upload-backend
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/php-image-upload-backend: "true"
  podSelector:
    matchLabels:
      io.kompose.network/php-image-upload-backend: "true"
