k8/php-image-upload-frontend-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: php-image-upload-frontend
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/php-image-upload-frontend: "true"
  podSelector:
    matchLabels:
      io.kompose.network/php-image-upload-frontend: "true"
